<resources>
    <string name="app_name">Code4SocialGood</string>
    <string name="connection_error">There is no Internet connection. Please connect to Internet the and try again.</string>
    <string name="URL_error">Please provide a valid URL.</string>
    <string name="cs4gDevURL">http://dev-api.code4socialgood.org/api/</string>
    <string name="orgDataQueryURL">http://dev-api.code4socialgood.org/api/organizations</string>
    <string name="projectDataQueryURL">http://dev-api.code4socialgood.org/api/projects</string>
    <string name="userDataQueryURL">http://dev-api.code4socialgood.org/api/users</string>
    <string name="skillsDataQueryURL">http://dev-api.code4socialgood.org/api/skills</string>
    <string name="projectHeroesURL">http://dev-api.code4socialgood.org/api/projects/heroes</string>
    <string name="projectJobTitlesURL">http://dev-api.code4socialgood.org/api/projects/jobTitles</string>
    <string name="organizationTotalCountriesURL">http://dev-api.code4socialgood.org/api/organizations/countries/total</string>
    <string name="storiesURL">http://dev-api.code4socialgood.org/api/stories</string>
    <string name="description_label">Description</string>
    <string name="posted_label">Posted:</string>
    <string name="location_label">Location:</string>
    <string name="title_label">Title:</string>
    <string name="introduction_label">Introduction:</string>
    <string name="image_logo">image</string>
    <string name="title_activity_c4sg__main_">c4sg_Main_Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Volunteers</string>
    <string name="tab_text_2">Projects</string>
    <string name="tab_text_3">Organizations</string>
</resources>