<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.code4socialgood.code4socialgood.Activity.ProjectDetailActivity">

    <ImageView
        android:id="@+id/imLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        tools:src="@drawable/placeholder"
        android:layout_margin="@dimen/margin"
        android:contentDescription="@string/image_logo" />
    <TextView
        android:id="@+id/tvNameProject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/imLogo"
        android:layout_toRightOf="@id/imLogo"
        tools:text="Name"
        android:layout_margin="@dimen/margin"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_color"/>
    <TextView
        android:id="@+id/tvLocationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/imLogo"
        android:layout_toRightOf="@id/imLogo"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/location_label"
        android:textColor="@color/text_color"
        android:layout_below="@id/tvNameProject"/>
    <TextView
        android:id="@+id/tvLocationProject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvNameProject"
        android:layout_toEndOf="@id/tvLocationLabel"
        android:layout_toRightOf="@id/tvLocationLabel"
        tools:text="Remote"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:textColor="@color/text_color"/>
    <TextView
        android:id="@+id/tvPostedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/imLogo"
        android:layout_toRightOf="@id/imLogo"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/posted_label"
        android:textColor="@color/text_color"
        android:layout_below="@id/tvLocationLabel"/>
    <TextView
        android:id="@+id/tvPostedProject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLocationProject"
        android:layout_toEndOf="@id/tvLocationLabel"
        android:layout_toRightOf="@id/tvLocationLabel"
        tools:text="1-12-2018"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginStart="10dp"
        android:textColor="@color/text_color"/>
    <TextView
        android:id="@+id/tvDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/description_label"
        android:textColor="@color/text_color"
        android:layout_below="@id/imLogo"/>

    <TextView
        android:id="@+id/tvDescriptionProject"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tvDescriptionLabel"
        tools:text="Description"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:scrollbars="vertical"/>

</RelativeLayout>
